--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ task deployToTomcat(dependsOn: "build") << {
 dependencies {
 
     providedCompile "javax.servlet:servlet-api:2.5"
-    providedCompile "javax.servlet.jsp:jsp-api:2.1"
-    providedCompile "javax.el:el-api:1.0"
+    providedCompile "javax.servlet.jsp:jsp-api:2.2"
+    providedCompile "javax.el:el-api:2.2"
     compile "javax.servlet.jsp.jstl:jstl-api:1.2"
     compile "org.glassfish.web:jstl-impl:1.2"
 
@@ -79,31 +79,31 @@ dependencies {
         exclude group: "com.sun.xml.bind", module: "jaxb-impl"
     }
 
-    compile "javax.validation:validation-api:1.0.0.GA"
-    compile "cglib:cglib-nodep:2.2.2"
+    compile "javax.validation:validation-api:1.1.0.Final"
+    compile "cglib:cglib-nodep:3.0"
     compile "javax.transaction:jta:1.1"
 
-    compile "commons-pool:commons-pool:1.5.6"
-    compile ("commons-dbcp:commons-dbcp:1.3") {
+    compile "commons-pool:commons-pool:1.6"
+    compile ("commons-dbcp:commons-dbcp:1.4") {
     	exclude group: "commons-logging", module: "commons-logging"
     	exclude group: "xml-apis", module: "xml-apis"
     }
     compile ("commons-digester:commons-digester:2.1") {
     	exclude group: "commons-logging", module: "commons-logging"
     }
-    compile "commons-codec:commons-codec:1.5"
+    compile "commons-codec:commons-codec:1.8"
 
     compile "org.apache.tiles:tiles-jsp:2.2.2"
 
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 
-    compile "javax.mail:mail:1.4.5"
+    compile "javax.mail:mail:1.4.7"
 
-    compile "junit:junit:4.10"
+    compile "junit:junit:4.11"
 
-    compile "org.jasypt:jasypt:1.9.0"
-	compile "org.jasypt:jasypt-spring31:1.9.0"
+    compile "org.jasypt:jasypt:1.9.1"
+	compile "org.jasypt:jasypt-spring31:1.9.1"
 
 	compile "net.tanesha.recaptcha4j:recaptcha4j:0.0.7"
 
