--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,11 @@
   <description>Chess website</description>
   <context-param>
     <param-name>webAppRootKey</param-name>
-    <param-value>vikasworld.root</param-value>
+    <param-value>app.root</param-value>
+  </context-param>
+  <context-param>
+	<param-name>spring.profiles.active</param-name>
+	<param-value>dev</param-value>
   </context-param>
   <context-param>
     <param-name>logbackConfigLocation</param-name>
