--- a/src/main/webapp/WEB-INF/spring/prod.properties
+++ b/src/main/webapp/WEB-INF/spring/prod.properties
@@ -5,7 +5,7 @@ database.url=jdbc:mysql://localhost/vikas
 database.username=vikas
 database.password=ENC(Kz9wLj/aZZ81jhJbHeq3t5vOuJw4FpaH)
 
-pgn.file=http://chessband/games/MyGames.pgn
+pgn.file=http://chessband.com/games/MyGames.pgn
 
 recaptcha.publicKey=6LdoaLoSAAAAAF2NJzEdaPHSyFfIN4S94FV8h5iV
 recaptcha.privateKey=6LdoaLoSAAAAAFhV11J2r6tBWz_dvHHPYU92w3mk
