--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -5,6 +5,9 @@ database.url=jdbc:mysql://localhost/vikas
 database.username=vikas
 database.password=ENC(Kz9wLj/aZZ81jhJbHeq3t5vOuJw4FpaH)
 
+hibernate.config=/WEB-INF/spring/hibernate.cfg.xml
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 pgn.file=http://chessband.com/games/MyGames.pgn
 
 recaptcha.publicKey=6LdoaLoSAAAAAF2NJzEdaPHSyFfIN4S94FV8h5iV
