--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,13 @@ ext {
 
 	tomcatHome = "D:\\software\\apache-tomcat-6.0.37"
 
-	slf4jVersion = "1.7.5"
-	logbackVersion = "0.9.30"
-	aspectjVersion = "1.7.3"
-	springVersion = "3.2.4.RELEASE"
-	springSecurityVersion = "3.1.4.RELEASE"
-	hibernateVersion = "4.2.5.Final"
-	jacksonVersion = "2.2.3"
+	slf4jVersion = "1.7.6"
+	logbackVersion = "1.1.1"
+	aspectjVersion = "1.7.4"
+	springVersion = "4.0.1.RELEASE"
+	springSecurityVersion = "3.2.0.RELEASE"
+	hibernateVersion = "4.3.1.Final"
+	jacksonVersion = "2.3.0"
 }
 
 task deployToTomcat(dependsOn: "build") << {
@@ -43,13 +43,16 @@ dependencies {
     compile "org.aspectj:aspectjrt:$aspectjVersion"
     compile "org.aspectj:aspectjweaver:$aspectjVersion"
 
-    compile "org.apache.commons:commons-lang3:3.1"
+    compile "org.apache.commons:commons-lang3:3.2.1"
 
     // Spring dependencies
     compile ("org.springframework:spring-core:$springVersion") {
     	exclude group: "commons-logging", module: "commons-logging"
     }
     compile ("org.springframework:spring-context:$springVersion") {
+    	exclude group: "commons-logging", module: "commons-logging"
+    }
+    compile ("org.springframework:spring-context-support:$springVersion") {
     	exclude group: "commons-logging", module: "commons-logging"
     }
     compile "org.springframework:spring-test:$springVersion"
@@ -70,18 +73,18 @@ dependencies {
 
     compile "org.hsqldb:hsqldb:2.2.9"
 
-    compile "mysql:mysql-connector-java:5.0.8"
+    compile "mysql:mysql-connector-java:5.1.29"
 
     // Hibernate dependencies
     compile "org.hibernate:hibernate-core:$hibernateVersion"
     compile "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final"
 
-    compile ("org.hibernate:hibernate-validator:4.2.0.Final") {
+    compile ("org.hibernate:hibernate-validator:4.3.1.Final") {
         exclude group: "javax.xml.bind", module: "jaxb-api"
         exclude group: "com.sun.xml.bind", module: "jaxb-impl"
     }
 
-    compile "javax.validation:validation-api:1.1.0.Final"
+    compile "javax.validation:validation-api:1.0.0.GA"
     compile "javax.transaction:jta:1.1"
 
     compile "commons-pool:commons-pool:1.6"
@@ -92,14 +95,14 @@ dependencies {
     compile ("commons-digester:commons-digester:2.1") {
     	exclude group: "commons-logging", module: "commons-logging"
     }
-    compile "commons-codec:commons-codec:1.8"
+    compile "commons-codec:commons-codec:1.9"
 
     compile "org.apache.tiles:tiles-request-api:1.0.3"
-    compile "org.apache.tiles:tiles-api:3.0.1"
-    compile "org.apache.tiles:tiles-core:3.0.1"
-    compile "org.apache.tiles:tiles-servlet:3.0.1"
-    compile "org.apache.tiles:tiles-jsp:3.0.1"
-    compile "org.apache.tiles:tiles-el:3.0.1"
+    compile "org.apache.tiles:tiles-api:3.0.3"
+    compile "org.apache.tiles:tiles-core:3.0.3"
+    compile "org.apache.tiles:tiles-servlet:3.0.3"
+    compile "org.apache.tiles:tiles-jsp:3.0.3"
+    compile "org.apache.tiles:tiles-el:3.0.3"
 
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
