--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ dependencies {
 
     compile "org.jasypt:jasypt:$jasyptVersion"
     compile "org.jasypt:jasypt-spring31:$jasyptVersion"
+    compile "org.jasypt:jasypt-springsecurity3:$jasyptVersion"
 
     compile "net.tanesha.recaptcha4j:recaptcha4j:0.0.7"
 
