changed mail server details

--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -13,9 +13,13 @@ pgn.file=http://chessband.com/games/MyGames.pgn
 recaptcha.publicKey=6LdoaLoSAAAAAF2NJzEdaPHSyFfIN4S94FV8h5iV
 recaptcha.privateKey=6LdoaLoSAAAAAFhV11J2r6tBWz_dvHHPYU92w3mk
 
-mail.host=smtp.gmail.com
-mail.port=465
-mail.protocol=smtps
-mail.username=vikasworld2010@gmail.com
+
+mail.host=mail.chessband.com
+mail.port=587
+mail.protocol=smtp
+mail.smtp.auth=true
+mail.username=vikas@chessband.com
 mail.password=ENC(9hvHlclZ9RDFiLxgQvcF5I1MYU3jLdMr)
 mail.subject=welcome to chessband
+mail.smtp.auth=true
+mail.smtp.debug=true
