--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	</context-param>
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/logback.xml</param-value>
+		<param-value>/WEB-INF/classes/logback.xml</param-value>
 	</context-param>
 	<context-param>
 		<param-name>defaultHtmlEscape</param-name>
