fixed login bug

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,4 +1,4 @@
-context.path=http://localhost:8080
+context.path=http://localhost:8080/chessband
 
 database.driverClassName=org.hsqldb.jdbcDriver
 database.url=jdbc:hsqldb:hsql://localhost/
