resolve dbcp issue

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -4,6 +4,8 @@ database.driverClassName=org.hsqldb.jdbcDriver
 database.url=jdbc:hsqldb:hsql://localhost/
 database.username=sa
 database.password=ENC(Z/QIXjVvjqoFEx8l6qwk+g==)
+database.remove.abandoned=true
+database.validation.query=SELECT COUNT(1) FROM PERSON
 
 hibernate.config=/WEB-INF/spring/hibernate.cfg.xml
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
