--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -4,6 +4,8 @@ database.driverClassName=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost/vikas
 database.username=vikas
 database.password=ENC(Kz9wLj/aZZ81jhJbHeq3t5vOuJw4FpaH)
+database.remove.abandoned=true
+database.validation.query=SELECT 1
 
 hibernate.config=/WEB-INF/spring/hibernate.cfg.xml
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
