--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: "war"
+apply plugin: 'java' 
+apply plugin: 'war' 
+apply plugin: 'jetty' 
+apply plugin: 'eclipse-wtp'
 
 repositories {
     mavenLocal()
