added jetty stop

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'java' 
-apply plugin: 'war' 
-apply plugin: 'jetty' 
-apply plugin: 'eclipse-wtp'
+apply plugin: 'war'
+apply plugin: 'jetty'
 
 repositories {
     mavenLocal()
@@ -33,6 +32,13 @@ task deployToTomcat(dependsOn: "build") << {
         into "$tomcatHome\\webapps"
     }
 }
+
+jettyRunWar.stopPort = 8090
+jettyRunWar.stopKey = 'stopKey'
+jettyStop.stopPort = 8090
+jettyStop.stopKey = 'stopKey'
+jettyRun.stopPort = 8090
+jettyRun.stopKey = 'stopKey'
 
 dependencies {
 
