--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ ext {
 	springSecurityVersion = "3.2.4.RELEASE"
 	hibernateVersion = "4.3.5.Final"
 	jacksonVersion = "2.3.3"
-	tilesVersion = "3.0.3"
 	thymeleafVersion = "2.1.3.RELEASE"
 	thymeleafSecurityVersion = "2.1.1.RELEASE"
 	jasyptVersion = "1.9.2"
@@ -43,10 +42,6 @@ jettyRun.stopKey = 'stopKey'
 dependencies {
 
     providedCompile "javax.servlet:servlet-api:2.5"
-    providedCompile "javax.servlet.jsp:jsp-api:2.2"
-    providedCompile "javax.el:el-api:2.2"
-    compile "javax.servlet.jsp.jstl:jstl-api:1.2"
-    compile "org.glassfish.web:jstl-impl:1.2"
 
     compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
@@ -115,16 +110,10 @@ dependencies {
 
     compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity3:$thymeleafSecurityVersion"
 
-    compile "org.apache.tiles:tiles-request-api:1.0.3"
-
-    compile "org.apache.tiles:tiles-api:$tilesVersion"
-    compile "org.apache.tiles:tiles-core:$tilesVersion"
-    compile "org.apache.tiles:tiles-servlet:$tilesVersion"
-    compile "org.apache.tiles:tiles-jsp:$tilesVersion"
-    compile "org.apache.tiles:tiles-el:$tilesVersion"
-
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+
+    compile 'net.sf.saxon:Saxon-HE:9.5.1-5'
 
     compile "javax.mail:mail:1.4.7"
 
