--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'war'
 apply plugin: 'jetty'
 
 repositories {
-    mavenLocal()
     mavenCentral()
 }
 
@@ -14,7 +13,7 @@ ext {
 	slf4jVersion = "1.7.7"
 	logbackVersion = "1.1.2"
 	aspectjVersion = "1.8.0"
-	springVersion = "4.0.5.RELEASE"
+	springVersion = "4.0.7.RELEASE"
 	springSecurityVersion = "3.2.4.RELEASE"
 	hibernateVersion = "4.3.5.Final"
 	jacksonVersion = "2.4.0"
@@ -125,4 +124,6 @@ dependencies {
     compile "net.tanesha.recaptcha4j:recaptcha4j:0.0.7"
 
     compile "org.kohsuke:geoip:1.2.8"
+    
+    compile 'axis:axis:1.4'
 }
